# ChangeLog for sys-apps/man-pages
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.64 2006/11/26 19:30:24 vapier Exp $

*man-pages-2.42 (26 Nov 2006)

  26 Nov 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.42.ebuild:
  Version bump.

*man-pages-2.41 (13 Oct 2006)

  13 Oct 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.41.ebuild:
  Version bump.

*man-pages-2.39 (09 Aug 2006)

  09 Aug 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.39.ebuild:
  Version bump.

*man-pages-2.38 (04 Aug 2006)

  04 Aug 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.38.ebuild:
  Version bump.

*man-pages-2.36 (30 Jul 2006)

  30 Jul 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.36.ebuild:
  Version bump.

*man-pages-2.34 (20 Jun 2006)

  20 Jun 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.34.ebuild:
  Version bump.

*man-pages-2.33 (07 Jun 2006)

  07 Jun 2006; Mike Frysinger <vapier@gentoo.org> man-pages-2.32.ebuild,
  +man-pages-2.33.ebuild:
  Version bump.

*man-pages-2.32 (17 May 2006)

  17 May 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.32.ebuild:
  Version bump.

*man-pages-2.31 (03 May 2006)

  03 May 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.31.ebuild:
  Version bump.

*man-pages-2.30 (03 May 2006)

  03 May 2006; Mike Frysinger <vapier@gentoo.org> man-pages-2.29.ebuild,
  +man-pages-2.30.ebuild:
  Version bump.

*man-pages-2.29 (09 Apr 2006)

  09 Apr 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.29.ebuild:
  Version bump.

*man-pages-2.28 (01 Apr 2006)

  01 Apr 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.28.ebuild:
  Version bump.

*man-pages-2.27 (28 Mar 2006)

  28 Mar 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.27.ebuild:
  Version bump.

*man-pages-2.26 (21 Mar 2006)

  21 Mar 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.26.ebuild:
  Version bump.

*man-pages-2.25 (03 Mar 2006)
