@@ -4,18 +4,23 @@ RMD160 090c1d31d4589fa19f8cb7e287a84f4f18e612e1 files/man-pages-2.08-updates.pat
 SHA256 c1302276b420acf3d9447cb3436ee2b70567b92917d7cf912c59f622086d1e37 files/man-pages-2.08-updates.patch 351
 DIST man-pages-2.41.tar.bz2 1817225 RMD160 a76c5b1944368643658b4ab0fd5abf253cad049f SHA1 1bcff3e89e80d8cfdc01d614aa372de378b832a1 SHA256 bc9e3fe06a550d6eb48fd84eaf58415c78fbc29ba042e4a074adb62736f50760
 DIST man-pages-2.42.tar.bz2 1820225 RMD160 b9964259eed064dea25da0c7f3a12543dbcc2ae6 SHA1 a4b1ba53e90ce4771d70b41da6c17a8f0a50a305 SHA256 192f38c3555f78f66a9f3670296df6f70d087b128749f3467a5ec479ad53db0e
-EBUILD man-pages-2.41.ebuild 1397 RMD160 d0e84cc1b8dfdbc017c65e96ab603a52242682aa SHA1 eead7da5ae2fc6fee198e8043b94c2d1ba922d95 SHA256 a4b4ef9f48afcc2b105f3ffba1b5bd0c39a6742f3fecd75511588650f9337764
-MD5 32f8e91e76a46ce2147f79c19a1b8178 man-pages-2.41.ebuild 1397
-RMD160 d0e84cc1b8dfdbc017c65e96ab603a52242682aa man-pages-2.41.ebuild 1397
-SHA256 a4b4ef9f48afcc2b105f3ffba1b5bd0c39a6742f3fecd75511588650f9337764 man-pages-2.41.ebuild 1397
-EBUILD man-pages-2.42.ebuild 1397 RMD160 fef2dc1f301ea8a84670ec664ed49299d5a1e90e SHA1 ebc5fa2929a56faa34efd15f40d02016672bdc53 SHA256 7a4abfed95dca8e3b8d5a0bafe172f447b7e0b67d808362c1da3bdefda5f459e
-MD5 522e02b40a9fd672515a709abea7af7d man-pages-2.42.ebuild 1397
-RMD160 fef2dc1f301ea8a84670ec664ed49299d5a1e90e man-pages-2.42.ebuild 1397
-SHA256 7a4abfed95dca8e3b8d5a0bafe172f447b7e0b67d808362c1da3bdefda5f459e man-pages-2.42.ebuild 1397
-MISC ChangeLog 8401 RMD160 7748b87a74aaadc8b8c008eb794aff88d1faaf86 SHA1 c87587a1ffd93a443700efea6896282557b4eb67 SHA256 4218a19bda2827160de9ca4905712b750bc355d0b481bbbe1371514b4bdd9e9f
-MD5 f97bed77f9785074b27b727187b3c03a ChangeLog 8401
-RMD160 7748b87a74aaadc8b8c008eb794aff88d1faaf86 ChangeLog 8401
-SHA256 4218a19bda2827160de9ca4905712b750bc355d0b481bbbe1371514b4bdd9e9f ChangeLog 8401
+DIST man-pages-2.43.tar.bz2 1822013 RMD160 6e1ddbdc803b0d5ecda1904669e08d1fb5f698bd SHA1 4a92b0bc87f592c6952fc5248e2a2e9fbc0caf87 SHA256 14413b40966b25ba172a23876570d8255313b7ed9dafbe573844544440a9e398
+EBUILD man-pages-2.41.ebuild 1420 RMD160 d81a6788c7fb5d1e7030a7ef5e1365344e80c471 SHA1 e4c67386e7185b375679ab475fa9c978886899d1 SHA256 b223341b187b7f1e8d3724890d732b832b5b14d1171eef0b1973068e4aa52ebf
+MD5 b2f62bb9acf476c8776c3a4aea0e693f man-pages-2.41.ebuild 1420
+RMD160 d81a6788c7fb5d1e7030a7ef5e1365344e80c471 man-pages-2.41.ebuild 1420
+SHA256 b223341b187b7f1e8d3724890d732b832b5b14d1171eef0b1973068e4aa52ebf man-pages-2.41.ebuild 1420
+EBUILD man-pages-2.42.ebuild 1417 RMD160 e2adedd96d247785c962d7ec4be0d56a5ac31d83 SHA1 59f47b54210000018f60f54505b1de8346f1672f SHA256 e3981753a0eccb5784e1d3a78275182780fb07b75de0113421d879013d9c3cc3
+MD5 9ae2c66ed90348b476d38612b8e1a2dd man-pages-2.42.ebuild 1417
+RMD160 e2adedd96d247785c962d7ec4be0d56a5ac31d83 man-pages-2.42.ebuild 1417
+SHA256 e3981753a0eccb5784e1d3a78275182780fb07b75de0113421d879013d9c3cc3 man-pages-2.42.ebuild 1417
+EBUILD man-pages-2.43.ebuild 1397 RMD160 2c01dcc21c0f8eb59092be8a93448ab75338623b SHA1 ef0ad8ef30a70b8de8f900f92f1e321a3aa938eb SHA256 35bc7f17c97d3811e2e9002328ae8230bfee90ad3d078dd1fd2b3d3cea83cc7f
+MD5 a35701a0e7527892a344e7826c9ccb00 man-pages-2.43.ebuild 1397
+RMD160 2c01dcc21c0f8eb59092be8a93448ab75338623b man-pages-2.43.ebuild 1397
+SHA256 35bc7f17c97d3811e2e9002328ae8230bfee90ad3d078dd1fd2b3d3cea83cc7f man-pages-2.43.ebuild 1397
+MISC ChangeLog 8691 RMD160 1d5925e9a499a5da860291383729ada064440bdf SHA1 4ee32c5a16cb00e89161fdc8ff4234c1c56df1aa SHA256 2bfcce63d178796b8a6f3f1b4e57aba10dabb8b984ec95cbf27bedde2ebcab18
+MD5 afc98638ee1ee53e0f3b0ed77b90af1c ChangeLog 8691
+RMD160 1d5925e9a499a5da860291383729ada064440bdf ChangeLog 8691
+SHA256 2bfcce63d178796b8a6f3f1b4e57aba10dabb8b984ec95cbf27bedde2ebcab18 ChangeLog 8691
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -26,3 +31,6 @@ SHA256 572d478e2988463456c0685fc88ab3f0ffe1abd4d55aca0459bcaa6c0e4c64a1 files/di
 MD5 dedc82ef1a70476f70a179294407da05 files/digest-man-pages-2.42 250
 RMD160 1ce3554b33670545e096e43cb2033bb575cacaa9 files/digest-man-pages-2.42 250
 SHA256 fbcbdf616a6474ef4d6ce1217377df36a877501c0c756abd20df59bc7e3e85f4 files/digest-man-pages-2.42 250
+MD5 510e2f5cda84a584002a757b341a4863 files/digest-man-pages-2.43 250
+RMD160 1521097045e46f6c110dc974b86c79efb77a1bfa files/digest-man-pages-2.43 250
+SHA256 56ca00145e12a8bba82bdb9611878f4e6f5f670f1ddd09fe68cccaa9f84623b3 files/digest-man-pages-2.43 250
