@@ -1,0 +1,3 @@
+MD5 15105479df4f65dd208eaaded48a1f54 man-pages-2.43.tar.bz2 1822013
+RMD160 6e1ddbdc803b0d5ecda1904669e08d1fb5f698bd man-pages-2.43.tar.bz2 1822013
+SHA256 14413b40966b25ba172a23876570d8255313b7ed9dafbe573844544440a9e398 man-pages-2.43.tar.bz2 1822013
