@@ -1,6 +1,15 @@
 # ChangeLog for sys-apps/man-pages
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.64 2006/11/26 19:30:24 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.66 2006/12/02 22:41:10 vapier Exp $
+
+*man-pages-2.43 (02 Dec 2006)
+
+  02 Dec 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.43.ebuild:
+  Version bump.
+
+  02 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> man-pages-2.41.ebuild,
+  man-pages-2.42.ebuild:
+  Block libiconv, as this and that both install iconv(3) manpage.
 
 *man-pages-2.42 (26 Nov 2006)
 
